--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -7,7 +7,7 @@
             <div class="col-lg-3">
                 <a href="/{{this.displayedName}}">
                     <div class="content">
-                        <div class="img-parent"><img src="{{this.profilePicture}}" alt=""></div>
+                        <div class="img-parent"><img src="{{this.imageUrl}}" alt=""></div>
                         <div class="mt-3">
                             <div class="d-flex justify-content-between">
                                 <span class="bold">{{this.displayedName}}</span>
