Revert "+ store media files to aws s3"
This reverts commit 59dce4441bb4bcc7f5fc86e3c1cff0a324766631.

--- a/src/views/establishment-view.hbs
+++ b/src/views/establishment-view.hbs
@@ -7,7 +7,7 @@
         {{#with selectedEstab}}
         <div class="col-lg-5">
             <div class="card mt-5">
-                <img class="card-img-top" src="{{{imageUrl}}}" alt="">
+                <img class="card-img-top" src="{{{profilePicture}}}" alt="">
                 <div class="card-body">
                     <div class="flex-center justify-content-between">
                         <div>
