--- a/src/views/theUser.hbs
+++ b/src/views/theUser.hbs
@@ -27,6 +27,12 @@
                         </textarea></form>
                     </div>
                 </div>
+                <form method="post" name="userControls" id="userControls">
+                <div class="form-check form-switch pt-3">
+                    <input class="form-check-input switch-success" type="checkbox" role="switch" id="userPrivacy" name="userPrivacy">
+                    <label class="form-check-label" for="userPrivacy">Toggle Privacy</label>
+                </div>
+                </form>
             </div>
 
         <div class="col ms-4 mt-5">
