--- a/src/views/partials/reply.hbs
+++ b/src/views/partials/reply.hbs
@@ -1,4 +1,4 @@
-<li class="REVIEW list-group-item">
+{{!-- <li class="REVIEW list-group-item">
                             <div class="user-profile  flex-center">
                                 <a href={{{link}}} class="flex-center"><img class="pfpRev img-fluid" src={{{img}}} alt={{{altName}}}></a>
                                 <div class="postDeats">
@@ -23,7 +23,12 @@
                                <form> <div class="form-group">
                                     <label for="c00001xctext" class="form-label writeReply">Write a Reply</label>
                                     <textarea class="form-control" required  id="c00001xctext" name="c00001xctext" rows="3"></textarea>
-                                    <button type="submit" class="postReply btn btn-success">Post</button>
+                                    <div class="d-flex justify-content-between">
+                                    <span class="d-flex align-items-center">
+                                                <button type="button" class="btn btn-sm btn-outline-secondary postAnonymously" data-bs-toggle="button">Post Anonymously</button>
+                                    </span>
+                                    <button type="submit" class="{{#if @root.isEstab}}estab{{/if}} postReply btn btn-success">Post</button>
+                                </div>
                                   </div></form>
                             </div>
 
@@ -31,4 +36,4 @@
                             <ul class="comment list-group list-group-flush collapse">
                                  {{{replies}}}
                                 </ul>
-</li>
+</li> --}}
