--- a/public/css/establishment.css
+++ b/public/css/establishment.css
@@ -212,6 +212,7 @@ copy for icons
       rgba(0, 0, 0, 0.2) var(--yourRev)
     );
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
   
@@ -438,4 +439,19 @@ copy for icons
 .filelist {
     list-style-position: inside;
     padding-left: 0;
+}
+
+.dropdown-item.active {
+    background-color: #198754;
+}
+
+.dropdown-item {
+    --bs-dropdown-link-active-bg: #198754;
+
+}
+
+#idFilterButton[aria-expanded="true"] {
+    color: var(--bs-btn-hover-color);
+    background-color: var(--bs-btn-hover-bg);
+    border-color: var(--bs-btn-hover-border-color);
 }
