--- a/src/views/search.hbs
+++ b/src/views/search.hbs
@@ -15,7 +15,9 @@
             <p class="h3 m-0">Establishment</p>
 
             <div class="dropdown m-0">
-                <button id="star-filter-dropdown" class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{starFilter}}</button>
+                <button id="star-filter-dropdown" class="btn btn-outline-dark btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{starFilter}}
+                </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a href="" class="dropdown-item star-filter" type="button">No filter</a>
                     <a href="" class="dropdown-item star-filter" type="button">5 Stars</a>
