--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -3,7 +3,7 @@
 <div class="container cards">
     <h3 class="pt-4 pb-2">Food establishments near Taft</h3>
     <div class="dropdown mb-3">
-        {{> sortFilter}}
+        {{> sortFilter}} <!--TEST-->
     </div>
     <div class="row gy-5">
         {{#each establishments}}
