--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -131,7 +131,7 @@
                     <div class="mb-3 row">
                         <label for="muteReason" class="form-label">Why?</label>
                         <div class="col">
-                            <textarea class="form-control" id="muteReason" rows="3"></textarea>
+                            <textarea class="form-control" id="muteReason" name="muteReason" rows="3"></textarea>
                         </div>
                         <div class="col"></div>
                     </div>
