--- a/public/css/establishment.css
+++ b/public/css/establishment.css
@@ -40,7 +40,7 @@
     height: 1.75em;
 }
 
-.moreRev, .yourReview {
+.yourReview {
     padding-inline: 0.8em;
 }
 
@@ -54,7 +54,7 @@ button.moreRev, .estabResponse, .imgBtn, .JBimgBtn, .ARBimgBtn {
     font-weight: 600;
 }
 
-.chat, .reply, .down, .up, .edit-review, .del-review, .edit-reply, .del-reply, .remove {
+.chat, .reply, .down, .up, .edit-review, .del-review, .edit-reply, .del-reply, .remove, .delNotif {
     background-repeat: no-repeat;
     background-size: 1rem 1rem;
     width: 1em;
@@ -138,7 +138,7 @@ copy for icons
     background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z' clip-rule='evenodd'/></svg>");
 }
 
-.delbgfill, span.del:hover, span.del-review:hover, span.del-reply:hover {
+.delbgfill, span.del:hover, span.del-review:hover, span.del-reply:hover, span.delNotif:hover {
     background-image: url("data:image/svg+xml,<svg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' d='M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z' clip-rule='evenodd'/></svg>");
 }
 .delbg {
