--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -50,3 +50,8 @@
     word-wrap: break-word;
     max-width: 100%;
 }
+
+.notifCard:not(.read) {
+    cursor: pointer;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+}
