--- a/src/views/establishment-view.hbs
+++ b/src/views/establishment-view.hbs
@@ -11,6 +11,7 @@
                 <div class="card-body">
                     <div class="flex-center justify-content-between">
                         <div>
+                            <span class="estabIDholder" id="{{_id}}"></span>
                             <h2 class="card-title estabNamez">{{{displayedName}}}</h2>
                             <p class="address">{{{address}}}</p>
                         </div>
