--- a/src/views/user.hbs
+++ b/src/views/user.hbs
@@ -17,21 +17,20 @@
             </div>
         </div>
 
-        <div class="col ms-4 mt-5">
+        <div class="col ms-4 mt-5 px-4">
             <div class="row">
-                <p class="fw-light mb-2">All Reviews and Comments</p>
+                <p class="fw-light mb-3">All Reviews and Comments</p>
             </div>
             {{#if topReviews}}
             {{#each topReviews}}
             {{> review this}}
             {{/each}}
-
             <!-- Truncated reviews -->
             {{#if truncatedReviews}}
                     <div class="row mb-3">
                         <button class="moreRev moreRevText">see more</button>
                     </div>
-                    <div class="row moreRev collapse">
+                    <div class="moreRev collapse">
                     {{#each truncatedReviews}}
                     {{> review this}}
                     {{/each}}
