+ search bug fix

--- a/src/views/search.hbs
+++ b/src/views/search.hbs
@@ -34,7 +34,7 @@
         <ul class="list-unstyled m-0">
             {{#each establishments}}
                 <li class="m-0 p-0">
-                    <a href="/{{username}}" class="text-decoration-none">
+                    <a href="/{{displayedName}}" class="text-decoration-none">
                         <div class="row" >
                             <div class="card container d-flex flex-row m-2 p-0 gap-2">
                                 <img class="result-image" src={{profilePicture}} alt="">
