--- a/src/views/partials/sortFilterEstablishment.hbs
+++ b/src/views/partials/sortFilterEstablishment.hbs
@@ -5,12 +5,12 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <button id="sortByHighest" value="highest" class="dropdown-item" type="button">
+            <button id="sortByHighest" class="dropdown-item" type="button">
                 Highest Ratings First
             </button>
         </li>
         <li>
-            <button id="sortByLowest" value="lowest" class="dropdown-item" type="button">
+            <button id="sortByLowest" class="dropdown-item" type="button">
                 Lowest Ratings First
             </button>
         </li>
@@ -20,27 +20,27 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <button id="sortBy5S" value="5" class="dropdown-item" type="button">
+            <button id="sortBy5S" class="dropdown-item" type="button">
                 5 stars only
             </button>
         </li>
         <li>
-            <button id="sortBy4S" value="4" class="dropdown-item" type="button">
+            <button id="sortBy4S" class="dropdown-item" type="button">
                 4 stars only
             </button>
         </li>
         <li>
-            <button id="sortBy3S" value="3" class="dropdown-item" type="button">
+            <button id="sortBy3S" class="dropdown-item" type="button">
                 3 Stars only
             </button>
         </li>
         <li>
-            <button id="sortBy2S" value="2" class="dropdown-item" type="button">
+            <button id="sortBy2S" class="dropdown-item" type="button">
                 2 Stars only
             </button>
         </li>
         <li>
-            <button id="sortBy1S" value="1" class="dropdown-item" type="button">
+            <button id="sortBy1S" class="dropdown-item" type="button">
                 1 Star only
             </button>
         </li>
@@ -51,27 +51,27 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <button id="sortByTag1Any" value="" class="dropdown-item" type="button">
+            <button id="sortByTag1Any" class="dropdown-item" type="button">
                 Any
             </button>
         </li>
         <li>
-            <button id="sortByTag1Filipino" value="Filipino" class="dropdown-item" type="button">
+            <button id="sortByTag1Filipino" class="dropdown-item" type="button">
                 Filipino
             </button>
         </li>
         <li>
-            <button id="sortByTag1FastFood" value="Fast Food" class="dropdown-item" type="button">
+            <button id="sortByTag1FastFood" class="dropdown-item" type="button">
                 Fast Food
             </button>
         </li>
         <li>
-            <button id="sortByTag1Bar" value="Bar" class="dropdown-item" type="button">
+            <button id="sortByTag1Bar" class="dropdown-item" type="button">
                 Bar
             </button>
         </li>
         <li>
-            <button id="sortByTag1LoungingArea" value="Lounging Area" class="dropdown-item" type="button">
+            <button id="sortByTag1LoungingArea" class="dropdown-item" type="button">
                 Lounging Area
             </button>
         </li>
@@ -82,27 +82,27 @@
     </button>
     <ul class="dropdown-menu">
         <li>
-            <button id="sortByTag2Any" value="" class="dropdown-item" type="button">
+            <button id="sortByTag2Any" class="dropdown-item" type="button">
                 Any
             </button>
         </li>
         <li>
-            <button id="sortByTag2Filipino" value="Filipino" class="dropdown-item" type="button">
+            <button id="sortByTag2Filipino" class="dropdown-item" type="button">
                 Filipino
             </button>
         </li>
         <li>
-            <button id="sortByTag2FastFood" value="Fast Food" class="dropdown-item" type="button">
+            <button id="sortByTag2FastFood" class="dropdown-item" type="button">
                 Fast Food
             </button>
         </li>
         <li>
-            <button id="sortByTag2Bar" value="Bar" class="dropdown-item" type="button">
+            <button id="sortByTag2Bar" class="dropdown-item" type="button">
                 Bar
             </button>
         </li>
         <li>
-            <button id="sortByTag2LoungingArea"value="Lounging Area" class="dropdown-item" type="button">
+            <button id="sortByTag2LoungingArea" class="dropdown-item" type="button">
                 Lounging Area
             </button>
         </li>
