--- a/src/views/user.hbs
+++ b/src/views/user.hbs
@@ -21,25 +21,29 @@
             <div class="row">
                 <p class="fw-light mb-2">All Reviews and Comments</p>
             </div>
-            {{#if topReviews}}
-            {{#each topReviews}}
-            {{> review this}}
-            {{/each}}
+            {{#unless isUserPrivate}}
+                {{#if topReviews}}
+                {{#each topReviews}}
+                {{> review this}}
+                {{/each}}
 
-            <!-- Truncated reviews -->
-            {{#if truncatedReviews}}
-                    <div class="row mb-3">
-                        <button class="moreRev moreRevText">see more</button>
-                    </div>
-                    <div class="row moreRev collapse">
-                    {{#each truncatedReviews}}
-                    {{> review this}}
-                    {{/each}}
-                    </div>
+                <!-- Truncated reviews -->
+                {{#if truncatedReviews}}
+                        <div class="row mb-3">
+                            <button class="moreRev moreRevText">see more</button>
+                        </div>
+                        <div class="row moreRev collapse">
+                        {{#each truncatedReviews}}
+                        {{> review this}}
+                        {{/each}}
+                        </div>
+                    {{/if}}
+                {{else}}
+                    <p class="fw-light flex-center flex-center justify-content-center pt-5 mt-5">No more reviews</p>
                 {{/if}}
             {{else}}
-                <p class="fw-light flex-center flex-center justify-content-center pt-5 mt-5">No more reviews</p>
-            {{/if}}
+                <p class="fw-light flex-center flex-center justify-content-center pt-5 mt-5">This user's reviews are private</p>
+            {{/unless}}
         </div>
     </div>
 </div>
